kustomize/overlays/sms-api-rke-dev/haproxy-ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ssh
spec:
  selector:
    app: haproxy-ssh
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
  type: ClusterIP
