kustomize/overlays/sms-api-rke-dev/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30051 # unique port for same cluster across different namespaces
  type: NodePort
