kustomize/overlays/sms-api-rke-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location /ws {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sms-dev.cam.uchc.edu
      secretName: letsencrypt-prod-sms-api-tls
  rules:
    - host: sms-dev.cam.uchc.edu
      http:
        paths:
          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /documentation
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /home
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /core
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /version
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ptools
                port:
                  number: 1555
